--- a/bt1/css/aboutus.css
+++ b/bt1/css/aboutus.css
@@ -5,12 +5,13 @@
 
 html {
   /* background: black; */
+  background-image: linear-gradient(to right,#cdd8dd, #c5916391,#108dc7,#8e44ad);
 }
 .main {
   font-family: Arial, Helvetica, sans-serif;
   width: 80%;
   margin: 0 auto;
-  background-color: rgb(236, 227, 227);
+  /* background-color: rgb(236, 227, 227); */
 }
 
 
@@ -20,6 +21,9 @@ html {
   position: relative;
   font-size: 16px;
   margin: 0 auto;
+
+  background-color: rgba(125, 141, 216, 0.3);
+
 }
 
 .logo{
