--- a/bt1/css/key.css
+++ b/bt1/css/key.css
@@ -5,17 +5,20 @@
 
 html {
   /* background: black; */
+  background-image: linear-gradient(to right,#cdd8dd, #c5916391,#108dc7,#8e44ad);
+  
 }
 .main {
   font-family: Arial, Helvetica, sans-serif;
   width: 80%;
   margin: 0 auto;
-  background-color: rgb(236, 227, 227);
+  /* background-color: rgb(236, 227, 227); */
 }
 
 
 .header {
   height: 80px;
+  background-color: rgba(125, 141, 216, 0.3);
   /* background-color: aqua; */
   position: relative;
   font-size: 16px;
@@ -73,7 +76,7 @@ html {
 
 .content {
   height: 1500px;
-
+  margin-top:40px;
 }
 
 
@@ -95,7 +98,7 @@ html {
 
 .content .card {
   width: 40%;
-  
+  border-radius: 10px;
 }
 
 .content .card1 {
@@ -106,6 +109,20 @@ html {
 
 .content .card2 {
   width: 40%;
-
+  margin-right: 30px;
   float: right;
+}
+
+.content .card img {
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
+}
+
+.note {
+  height: 100px;
+  text-align: center;
+  font-size: 30px;
+  font-style: italic;
+  color:black;
 }
