--- a/bai_cuoi_khoa/css/index.css
+++ b/bai_cuoi_khoa/css/index.css
@@ -8,6 +8,10 @@ body {
   width: 100%;
 }
 
+h3 {
+  font-weight: 300;
+}
+
 .header{
   position: fixed;
   width: 100%;
@@ -82,7 +86,7 @@ body {
 .content .img-content {
   padding-top: 50% ;
   margin-top: 120px;
-  background: url('/img/slide.jpg') top center no-repeat;
+  background: url('/bai_cuoi_khoa/img/slide.jpg') top center no-repeat;
   background-size: cover;
 }
 
@@ -224,6 +228,12 @@ body {
   margin-right: 4%;
   height: 360px;
   position: relative;
+  color:white;
+}
+
+.item.n2 img:hover{
+  transform: scale(1.1);
+  transition: transform 3.8s cubic-bezier(0.19,1,.22,1);
 }
 
 .item.n2 .first-n2 {
@@ -237,6 +247,7 @@ body {
 .item.n2 img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 
 .item {
@@ -247,29 +258,59 @@ body {
 .title-youtube {
   position: absolute;
   bottom: 10%;
+  left:4%;
+  z-index: 20;
+  font-weight: 400;
 }
 
 .title-info {
   position: absolute;
-  bottom: 0.2%;
+  bottom: 2%;
+  left:4%;
+  z-index: 20;
+  font-weight: 400;
+}
+
+.icon-youtube {
+  position: absolute;
+  bottom: 20%;
+  left: 4%;
+  width: 52px;
+  height: 52px;
+  background: #c70101;
+  border-radius: 4px;
+  z-index: 20;
+
+}
+
+.icon-youtube .play-button {
+  background: url('/bai_cuoi_khoa/img/icons-J5Vfiqzk9.png');
+  background-position: -720px 0;
+  margin-left: 50%;
+  height: 17px;
+  width: 12px;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  z-index: 20;
+  bottom: 20%;
 }
 
 /* about-us.html */
 .slider {
-  background: url('/img/about-us.jpg') top center /cover no-repeat;
+  background: url('/bai_cuoi_khoa/img/about-us.jpg') top center /cover no-repeat;
   margin-top: 120px;
   width: 100%;
   height: 500px;
   position: relative;
 }
 
-.slider .color-slider {
+.color-slider {
   background: linear-gradient(185deg,rgba(0,0,0,0) 20%,rgba(0,0,0,.9) 80%);
-  height: 300px;
+  height: 40%;
   width: 100%;
   position:absolute;
   bottom: 0;
-  z-index: 98;
+  z-index: 18;
 }
 
 .name-special {
