--- a/bai_cuoi_khoa/css/index.css
+++ b/bai_cuoi_khoa/css/index.css
@@ -1,3 +1,12 @@
+@font-face {
+  font-family: SourceSansProLight 
+  src: url("../fonts/sourcesanspro/SourceSansPro-Light.otf");
+}
+
+@font-face {
+  font-family: MontserratBold;
+  src: url("../fonts/Montserrat/montserrat-semibold.woff");
+}
 * {
   margin: 0;
   padding: 0;
@@ -6,6 +15,7 @@
 
 body {
   width: 100%;
+  background-color: #f8f8f8;
 }
 
 h3 {
@@ -15,7 +25,7 @@ h3 {
 .header{
   position: fixed;
   width: 100%;
-  z-index: 3;
+  z-index: 99999;
   top: 0;
 }
 
@@ -48,7 +58,7 @@ h3 {
 .container {
   position: relative;
   height: 80px;
-  background: red;
+  background: #c70101;
 }
 
 .nav {
@@ -65,18 +75,20 @@ h3 {
 
 .container li a {
   text-align: center;
-  font-size: 20px;
+  font-size: 14px;
   text-decoration: none;
   line-height: 80px;
-  color: white;
+  color: #f2f2f2;
   padding: 0px 15px;
   display: block;
+  font-family: MontserratBold;
+  text-transform: uppercase;
+  font-weight: normal;
 
 }
 
 .container li a:hover{
-  color: black;
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid #fff;
 }
 
 .content{
@@ -173,10 +185,12 @@ h3 {
 }
 
 .news .item {
-  background-color: rgb(124, 176, 185);
+  background: #fff;
   height: 400px;
   float: left;
+  border: 1px #f2f2f2;
   /* margin-right: 10px; */
+  
 }
 
 .news .item.n1 {
@@ -193,11 +207,24 @@ h3 {
 .item.n1 .first-n1 {
   position: relative;
   height: 100%;
-  width: 50%;
+  width: 48%;
   float: left;
+  overflow: hidden;
+
 }
 
-.item.n1 .first-n1 img {
+.img-news {
+  background-image: url(/bai_cuoi_khoa/img/news1-img.jpg);
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: -10px 0;
+  transition: transform .1s ease;
+}
+
+.item.n1 img {
+  /* position: absolute; */
   height: 100%;
   width: 100%;
   object-fit: cover;
@@ -207,13 +234,34 @@ h3 {
   float: left;
   width: 50%;
   padding: 20px 0px 16px 0;
+  position:relative;
+  height: 100%;
+  overflow: hidden;
 }
 
 .second-n1 .news-heading{
+  margin-top:20%;
   margin-left: 10px;
+  width: 61px;
+  position: relative;
+}
+
+.second-n1 .news-heading::after {
+  content: "";
+  width: 61px;
+  position: absolute;
+  top: -10px;
+  border-top: 2px #c81617 solid;
+  transition:all linear 0.3s;
+  transform: scaleX(0);
+}
+
+.item:hover .news-heading::after {
+  transform: scaleX(1);
 }
 
 .second-n1 .news-p {
+  margin-top: 5%;
   margin-left: 10px;
   margin-right: 10px;
 }
@@ -222,6 +270,21 @@ h3 {
   font-size: 20px;
 }
 
+.item:hover {
+  box-shadow: 0 14px 28px rgb(0 0 0 / 10%),
+  0 10px 10px rgb(0 0 0 / 10%);
+}
+
+.item:hover .img-news {
+  transform: scale(1.1);
+  /* transition: transform 4s cubic-bezier(0.19,1,.22,1); */
+
+}
+
+/* .item .news-heading:hover{
+  transform: scaleX(1);
+
+} */
 .item.n2 {
   margin-top: 20px;
   width: 22%;
@@ -330,6 +393,7 @@ h3 {
   margin: 0 auto;
   font-family: SourceSansProLight,Helvetica,sans-serif;
   color: #231f20;
+  margin-bottom: 5%;
 }
 
 .content-mid .description .intro-description{
@@ -340,4 +404,19 @@ h3 {
 .content-mid .description p{
   margin-bottom: 16px;
   font-size: 20px;
+}
+
+.content-picture {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.content-picture .item-gallery {
+  width: 48%;
+  height: 333px;
+  margin-left: 1%;
+  margin-right: 1%;
+  float: left;
+  background-color: #1a1a1a;
+  margin-bottom: 24px;
 }
